[movies-23] feature: Add color container with day night support
This color will be used on those containers that require day night
support with that specific day night coloring scheme.

--- a/core/src/main/res/values-night/colors.xml
+++ b/core/src/main/res/values-night/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorBackground">@color/black</color>
     <color name="colorOnBackground">@color/colorPrimaryVariant</color>
 
+    <!-- App -->
+    <color name="colorContainer">@color/colorPrimaryVariant</color>
+
 </resources>
