[movies-23] feature: Add toolbar container style

--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -42,6 +42,10 @@
     </style>
 
     <!-- Toolbar -->
+    <style name="ctrToolbar">
+        <item name="android:background">@color/colorOnBackground</item>
+    </style>
+
     <style name="tvToolbarLabel">
         <item name="android:layout_gravity">center</item>
         <item name="android:paddingEnd">@dimen/spacingM</item>
