[movies-23] feature: Add movie details container style

--- a/feature/movie-details/src/main/res/values/styles.xml
+++ b/feature/movie-details/src/main/res/values/styles.xml
@@ -2,6 +2,10 @@
 
 <resources>
 
+    <style name="ctrMovieDetails">
+        <item name="android:background">@color/colorContainer</item>
+    </style>
+
     <style name="ivBackdrop">
         <item name="android:scaleType">fitXY</item>
     </style>
