--- a/feature/movie-details/src/main/res/layout/movie_details_activity.xml
+++ b/feature/movie-details/src/main/res/layout/movie_details_activity.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ctrMovieDetails"
+    style="@style/ctrMovieDetails"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MovieDetailsActivity">
