[movies-23] feature: Add color container bg to item details ctr style

--- a/feature/movies/src/main/res/values/styles.xml
+++ b/feature/movies/src/main/res/values/styles.xml
@@ -49,6 +49,7 @@
     </style>
 
     <style name="ctrItemDetails">
+        <item name="android:background">@color/colorContainer</item>
         <item name="android:paddingBottom">@dimen/spacingS</item>
         <item name="android:paddingLeft">@dimen/spacingM</item>
         <item name="android:paddingRight">@dimen/spacingM</item>
