--- a/feature/picker/src/main/res/values/styles.xml
+++ b/feature/picker/src/main/res/values/styles.xml
@@ -4,9 +4,11 @@
 
     <!-- Do not change style name as it is being used to override 'monthandyearpicker' library's theme. -->
     <style name="MonthPickerDialogStyle" tools:ignore="UnusedResources">
-        <item name="monthBgSelectedColor">@color/colorPrimary</item>
-        <item name="headerBgColor">@color/colorPrimary</item>
-        <item name="dialogActionButtonColor">@color/colorPrimary</item>
+        <item name="monthBgSelectedColor">@color/monthBgSelectedColor</item>
+        <item name="headerBgColor">@color/headerBgColor</item>
+        <item name="dialogActionButtonColor">@color/dialogActionButtonColor</item>
+        <item name="monthBgColor">@color/colorBackground</item>
+        <item name="monthFontColorNormal">?android:attr/textColorPrimary</item>
     </style>
 
 </resources>
