[movies-23] feature: Add day night support to splash screen

--- a/feature/splash/src/main/res/drawable/logo.xml
+++ b/feature/splash/src/main/res/drawable/logo.xml
@@ -8,7 +8,7 @@
     android:viewportWidth="1000">
 
     <path
-        android:fillColor="@color/colorPrimary"
+        android:fillColor="@color/colorOnBackground"
         android:pathData="M380.35,75.47c-90.89,12.32 -173.69,52.76 -240.51,117.27c-69.52,67.2 -110.53,147.7
                           -126.51,247.83c-4.43,27.15 -4.43,91.47 0,118.62C28.53,654.7 66.47,731.92 129.82,797.2C213.2,882.5
                           319.3,927.37 438.5,927.37c63.93,-0 122.28,-13.09 183.7,-41.01c63.16,-28.88 121.7,-41.59
