--- a/feature/splash/src/main/res/drawable/background.xml
+++ b/feature/splash/src/main/res/drawable/background.xml
@@ -2,7 +2,7 @@
 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@android:color/white"/>
+    <item android:drawable="@color/colorBackground" />
 
     <item
         android:drawable="@drawable/logo"
