--- a/feature/movies/src/main/res/layout/movies_toolbar.xml
+++ b/feature/movies/src/main/res/layout/movies_toolbar.xml
@@ -40,7 +40,7 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvToolbarFilterYear"
-            style="@style/tvToolbarFilterYear"
+            style="@style/tvToolbarFilter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tvToolbarFilterYear"
@@ -49,7 +49,7 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvToolbarFilterMonth"
-            style="@style/tvToolbarFilterMonth"
+            style="@style/tvToolbarFilter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tvToolbarFilterMonth"
