--- a/feature/movie-details/src/main/res/values/styles.xml
+++ b/feature/movie-details/src/main/res/values/styles.xml
@@ -16,17 +16,9 @@
         <item name="android:textAppearance">?attr/textAppearanceHeadline5</item>
     </style>
 
-    <style name="tvReleaseDate">
-        <item name="android:paddingBottom">@dimen/spacingXXS</item>
+    <style name="tvDetails">
         <item name="android:paddingLeft">@dimen/spacingM</item>
         <item name="android:paddingRight">@dimen/spacingM</item>
-        <item name="android:textAppearance">?attr/textAppearanceBody1</item>
-    </style>
-
-    <style name="tvVote">
-        <item name="android:paddingLeft">@dimen/spacingM</item>
-        <item name="android:paddingRight">@dimen/spacingM</item>
-        <item name="android:paddingTop">@dimen/spacingXXS</item>
         <item name="android:textAppearance">?attr/textAppearanceBody1</item>
     </style>
 
