[movies-24] feature: Add snackbar to app theme
Will that change any snackbar future implementation will by default
adhere to the day/night theme.

--- a/core/src/main/res/values-night/colors.xml
+++ b/core/src/main/res/values-night/colors.xml
@@ -4,6 +4,8 @@
     <!-- Theme -->
     <color name="colorBackground">@color/black</color>
     <color name="colorOnBackground">@color/colorPrimaryVariant</color>
+    <color name="colorSnackbarBackground">@color/black</color>
+    <color name="colorSnackbarText">@color/design_default_color_error</color>
 
     <!-- App -->
     <color name="colorContainer">@color/colorPrimaryVariant</color>
