--- a/core/src/main/res/values/theme.xml
+++ b/core/src/main/res/values/theme.xml
@@ -22,6 +22,10 @@
         <item name="textAppearanceHeadline6">@style/TextAppearance.App.Headline6</item>
         <item name="textAppearanceBody1">@style/TextAppearance.App.Body1</item>
         <item name="textAppearanceSubtitle1">@style/TextAppearance.App.Subtitle1</item>
+        <!-- Snackbar -->
+        <item name="snackbarStyle">@style/Widget.App.Snackbar</item>
+        <item name="snackbarTextViewStyle">@style/Widget.App.Snackbar.TextView</item>
+        <item name="snackbarButtonStyle">@style/Widget.App.Snackbar.Button</item>
     </style>
 
     <!-- Text -->
@@ -39,6 +43,20 @@
 
     <style name="TextAppearance.App.Subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
         <item name="android:textColor">?android:attr/textColorPrimary</item>
+    </style>
+
+    <!-- Snackbar -->
+    <style name="Widget.App.Snackbar" parent="Widget.MaterialComponents.Snackbar">
+        <item name="android:background">@color/colorSnackbarBackground</item>
+    </style>
+
+    <style name="Widget.App.Snackbar.TextView" parent="Widget.MaterialComponents.Snackbar.TextView">
+        <item name="android:textColor">@color/colorSnackbarText</item>
+    </style>
+
+    <style name="Widget.App.Snackbar.Button" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">?attr/colorError</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 </resources>
