--- a/feature/movie-details/src/main/res/values/styles.xml
+++ b/feature/movie-details/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
 <resources>
 
     <style name="ctrMovieDetails">
-        <item name="android:background">@color/colorContainer</item>
+        <item name="android:background">@color/colorContainerBackground</item>
     </style>
 
     <style name="ivBackdrop">
