--- a/feature/movies/src/main/res/values/styles.xml
+++ b/feature/movies/src/main/res/values/styles.xml
@@ -35,7 +35,7 @@
     </style>
 
     <style name="ctrItemDetails">
-        <item name="android:background">@color/colorContainer</item>
+        <item name="android:background">@color/colorContainerBackground</item>
         <item name="android:paddingBottom">@dimen/spacingS</item>
         <item name="android:paddingLeft">@dimen/spacingM</item>
         <item name="android:paddingRight">@dimen/spacingM</item>
