[movies] refactor: Make s on spacing xl lower case

--- a/core/src/main/res/values/dimens.xml
+++ b/core/src/main/res/values/dimens.xml
@@ -10,7 +10,7 @@
     <dimen name="spacingS">8dp</dimen>
     <dimen name="spacingM">16dp</dimen>
     <dimen name="spacingL">32dp</dimen>
-    <dimen name="SpacingXL">48dp</dimen>
+    <dimen name="spacingXL">48dp</dimen>
     <dimen name="spacingXXL">56dp</dimen>
     <dimen name="spacingXXXL">64dp</dimen>
 
