--- a/feature/movies/src/main/res/layout/movies_activity.xml
+++ b/feature/movies/src/main/res/layout/movies_activity.xml
@@ -13,6 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/toolbarHeight"
         app:layout_constraintBottom_toTopOf="@id/recyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:layout_constraintVertical_chainStyle="packed" />
@@ -24,6 +26,8 @@
         android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         tools:listitem="@layout/movie_item_view" />
 
