[movies] refactor: Replace toolbar height with action bar size attribute

--- a/feature/movies/src/main/res/layout/movies_activity.xml
+++ b/feature/movies/src/main/res/layout/movies_activity.xml
@@ -11,7 +11,7 @@
     <io.petros.movies.movies.toolbar.MoviesToolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/toolbarHeight"
+        android:layout_height="?attr/actionBarSize"
         app:layout_constraintBottom_toTopOf="@id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
