--- a/feature/movie-details/src/main/res/layout/movie_details_activity.xml
+++ b/feature/movie-details/src/main/res/layout/movie_details_activity.xml
@@ -16,7 +16,7 @@
         <io.petros.movies.movie_details.toolbar.MovieDetailsToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/toolbarHeight"
+            android:layout_height="?attr/actionBarSize"
             app:layout_constraintBottom_toTopOf="@id/ivBackdrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
