[movies-25] feature: Add app activity with app navigation and toolbar
This will become the single activity of the project.

Also, as part of this commit and the 'app_activity' layout, a
'DrawerLayout' is added to the project, but which will be left empty on
purpose for now and be filled with functionality as part of another
future item of this repo.

--- a/core/src/main/res/values/theme.xml
+++ b/core/src/main/res/values/theme.xml
@@ -28,6 +28,17 @@
         <item name="snackbarButtonStyle">@style/Widget.App.Snackbar.Button</item>
     </style>
 
+    <!-- Toolbar -->
+    <style name="ToolbarTheme" parent="AppTheme">
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:background">@color/colorOnBackground</item>
+        <item name="drawerArrowStyle">@style/drawerArrow</item>
+    </style>
+
+    <style name="drawerArrow" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="color">@color/white</item>
+    </style>
+
     <!-- Text -->
     <style name="TextAppearance.App.Headline5" parent="TextAppearance.MaterialComponents.Headline5">
         <item name="android:textColor">?attr/colorOnPrimary</item>
