--- a/feature/movies/src/main/res/layout/movies_fragment.xml
+++ b/feature/movies/src/main/res/layout/movies_fragment.xml
@@ -6,7 +6,7 @@
     android:id="@+id/ctrMovies"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MoviesActivity">
+    tools:context=".MoviesFragment">
 
     <io.petros.movies.movies.toolbar.MoviesToolbar
         android:id="@+id/toolbar"
