[movies-25] feature: Replace movie details activity with fragment

--- a/feature/movie-details/src/main/res/layout/movie_details_fragment.xml
+++ b/feature/movie-details/src/main/res/layout/movie_details_fragment.xml
@@ -7,7 +7,7 @@
     style="@style/ctrMovieDetails"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MovieDetailsActivity">
+    tools:context=".MovieDetailsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
