[movies-25] feature: New app navigation utilising navigation component
This is the ultimate change that replaces the old with the new
navigation.

--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/appNavigation"
+    app:startDestination="@id/moviesNavigation"
     tools:ignore="UnusedResources, InvalidNavigation">
+
+    <include app:graph="@navigation/movies_navigation" />
 
 </navigation>
