[movies] cleanup: Remove unnecessary progress bar attributes
Those are unnecessary as they have been already defined within its
style.

--- a/core/src/main/res/layout/progress_item_view.xml
+++ b/core/src/main/res/layout/progress_item_view.xml
@@ -7,8 +7,6 @@
     <ProgressBar
         style="@style/pbProgressItem"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:padding="@dimen/spacingL" />
+        android:layout_height="wrap_content" />
 
 </merge>
